# ibid

./: .gitignore  LICENSE  README.md  TESTS.md  package.json  playwright.config.js  requirements.txt  tailwind.config.js
.github/workflows/: deploy-website.yml
browser/chrome/: manifest.json  storelisting.txt
browser/chrome/background/: db.js  fallback-parsers.js  resolver.js  (+1 more)
browser/edge/: storelisting.txt
browser/firefox/: manifest.json
crates/ibid-core/: Cargo.toml
crates/ibid-core/src/: error.rs  lib.rs  types.rs  wasm_api.rs
crates/ibid-core/src/csl/: hayagriva_renderer.rs  locale.rs  mod.rs  renderer.rs  style.rs
crates/ibid-core/src/parsers/: bibtex.rs  csv.rs  endnote_xml.rs  medline.rs  mod.rs  ris.rs
crates/ibid-core/src/serializers/: bibtex.rs  csv.rs  mod.rs  ris.rs  word_xml.rs  yaml.rs
crates/ibid-core/tests/: helpers.rs  test_locale.rs  test_names_dates.rs  test_parsers.rs  test_pdf_extract.rs  test_phase2_parsers.rs  test_phase2_serializers.rs  test_rendering.rs  test_serializers.rs  test_style_parsing.rs  test_types.rs
scripts/: build-chrome.js  build-firefox-manifest.js  build-store-packages.js  fetch-csl-styles.js  generate-icons.js  generate-style-registry.js  sync-firefox.js
tests/e2e/: e2e-results.md  helpers.js  ibid.spec.js
tests/extension/: run-all.js  test-extractor.js  test-fallback-parsers.js  test-phase4.js  test-popup-logic.js  test-resolver.js  test-runner.js  test-validation.js
tests/real-world/: test-all-styles.js  test-real-urls.js
website/src/: CNAME  index.html  privacy.html  robots.txt  sitemap.xml
(+33 files in other folders)
