[package]
name = "ibid-core"
version = "0.1.0"
edition = "2024"
description = "High-performance CSL citation engine for the Ibid citation manager"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
uuid = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
thiserror = "2"
unicode-segmentation = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
